fixed issue #1, background image leaving whitespace on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -455,6 +455,7 @@ body {
     /*background: #F2F3F5;*/
     background:url('https://www.random-hackery.net/wp-content/uploads/2013/11/beBackBg.jpg') top right no-repeat; background-attachment:fixed;
     background-size:100%;
+    background-color:#000000;
 }
 @keyframes pushPrev {
     0% {
